한국어로 변경

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VibePaper Generator</title>
+    <title>AI 배경화면 짤 생성기</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Simple scrollbar styling for a more modern look */
